--- a/src/main/webapp/WEB-INF/Views/home.html
+++ b/src/main/webapp/WEB-INF/Views/home.html
@@ -22,7 +22,7 @@
     <tbody>
     <th:block th:each="customer : ${customer}">
         <tr>
-            <th scope="row">[[$customer.id]]</th>
+            <th scope="row">[[{customer.id}]]</th>
             <td>[[$customer.name]]</td>
             <td>[[$customer.address]]</td>
             <td>
